--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,11 @@
 <title><%= yield(:title) %></title>
   <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-	<%= favicon_link_tag 'favicon.png' %>
+	<script src="/assets/jquery_ujs.js"></script>
+	<%= yield :javascript %>
+  <link   href="/assets/tagslide.css" media = "all" rel = "stylesheet">
+	<link type="image/vnd.microsoft.icon" rel="shortcut icon" href="/assets/favicon.png">
+	<%= yield :meta %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -16,20 +18,14 @@
 </header>
 <%= yield %>
 
-<!-- easing plugin ( optional ) -->
-<%= javascript_include_tag "easing", "data-turbolinks-track" => true %>
-<!-- UItoTop plugin -->
-<%= javascript_include_tag "jquery.ui.totop", "data-turbolinks-track" => true %>
-<!-- Starting the plugin -->
+<script src="/assets/up-to-top.js"></script>
 <script type="text/javascript">
   $(document).ready(function() {
 		$().UItoTop({ easingType: 'easeOutQuart' });
 	});
 </script>
-<!-- Bshare Button BEGIN -->
 <script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/button.js#style=-1&amp;uuid=&amp;pophcol=1&amp;lang=zh"></script>
 <a class="bshareDiv" onclick="javascript:return false;"></a>
 <script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/bshareC0.js"></script>
-<!-- bshare Button END -->
 </body>
 </html>
