modify simple views of password and mailer

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,11 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>亲爱的<%= @resource.username %>:</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>您的密码重设要求已经通过验证。请点击以下链接重设您的密码：</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to '重设密码', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>如果您并未申请重置TagSlide密码，可能是其他用户误输入了您的邮箱地址。请忽略此邮件。</p>
+
+<p>温馨提示：此邮件由系统自动发送，请勿直接回复。</p>
+
+<p>再次感谢您对TagSlide的支持，希望您在TagSlide能找到有用的内容，Enjoy!</p>
