--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,21 @@
-<h2>Change your password</h2>
+<div class = "row">
+  <div class = "col-md-offset-3 col-md-6">
+    <div class = "col-md-offset-3 col-md-6">
+      <h3>更改密码</h3>
+    </div>
+    <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+    <%= render 'shared/error_messages', object: resource %>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= f.input :reset_password_token, :as => :hidden %>
 
-  <%= f.input :reset_password_token, :as => :hidden %>
-  <%= f.full_error :reset_password_token %>
+    <%= f.input :password, :label => "新密码", :required => false, :autofocus => true, label_html: {style: "display: none;"},input_html: { class: " form-control",placeholder: "新的密码" }, wrapper_html: { class: "col-md-offset-3 col-md-6 form-group" }%>
+    <%= f.input :password_confirmation, :label => "确认新密码", :required => false,label_html: {style: "display: none;"},input_html: { class: " form-control",placeholder: "确认新密码" }, wrapper_html: { class: "col-md-offset-3 col-md-6 form-group" }%>
 
-  <div class="form-inputs">
-    <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
-    <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
+    <div class="form-group ">
+      <div class = "col-md-offset-3 col-md-6">
+        <%= f.button :submit, "重置密码", class: "btn btn-primary btn-block" %>
+      </div>
+    </div>
+    <% end %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
