--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,18 @@
-<h2>Forgot your password?</h2>
+<div class = "row">
+  <div class = "col-md-offset-3 col-md-6">
+    <div class = "col-md-offset-3 col-md-6">
+      <h3>输入您的注册邮箱重置密码</h3>
+    </div>
+    <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+    <%= render 'shared/error_messages', object: resource %>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
+	<%= f.input :email, :required => false, :autofocus => true, label: "邮箱", label_html: {style: "display: none;"},input_html: { class: " form-control",placeholder: "邮箱" }, wrapper_html: { class: "col-md-offset-3 col-md-6 form-group" } %>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+    <div class="form-group ">
+      <div class = "col-md-offset-3 col-md-6">
+          <%= f.button :submit, "发送", class: "btn btn-primary btn-block" %>
+      </div>
+    </div>
+    <% end %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
