--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,10 +1,11 @@
+<% provide(:title,"#{SITE_NAME}|邮件确认")%>
 <div class = "row">
   <div class = "col-md-offset-3 col-md-6">
     <div class = "col-md-offset-3 col-md-6">
-      <h3>TagSlide 重新发送确认邮件</h3>
+      <p>如果有错误提示，则可能您已经确认过账号，可以直接登录啦，如果没有确认过可能确认邮件已经失效，您可以填写注册邮箱，重新发送确认邮件。</p>
     </div>
     <%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-    <%= render 'shared/error_messages', object: resource %>
+    <%= render 'shared/original_errors', object: resource %>
 
 	<%= f.input :email, :required => false, :autofocus => true, label: "邮箱", label_html: {style: "display: none;"},input_html: { class: " form-control",placeholder: "邮箱" }, wrapper_html: { class: "col-md-offset-3 col-md-6 form-group" } %>
 
