--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{SITE_NAME}|重设密码") %>
 <div class = "row">
   <div class = "col-md-offset-3 col-md-6">
     <div class = "col-md-offset-3 col-md-6">
@@ -13,7 +14,7 @@
 
     <div class="form-group ">
       <div class = "col-md-offset-3 col-md-6">
-        <%= f.button :submit, "重置密码", class: "btn btn-primary btn-block" %>
+        <%= f.button :submit, "重设密码", class: "btn btn-primary btn-block" %>
       </div>
     </div>
     <% end %>
