--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{SITE_NAME}|忘记密码") %>
 <div class = "row">
   <div class = "col-md-offset-3 col-md-6">
     <div class = "col-md-offset-3 col-md-6">
