--- a/app/assets/stylesheets/customize.css.scss
+++ b/app/assets/stylesheets/customize.css.scss
@@ -26,7 +26,6 @@ body {
 
 a {
 	text-decoration: none;
-	color: #fff;
 }
 a:hover {
   text-decoration: none;
@@ -715,4 +714,8 @@ hr{
 
 .remember {
 	margin-top: 0px;
+}
+
+#pTab {
+  margin-top: 0px;
 }
