--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class= "row">
+<div class= "row fixed-bottom">
   <div class = "col-md-offset-1 col-md-5">
     <ul>
       <li>&copy; 2013 TagSlide</li>
@@ -6,7 +6,9 @@
   </div>
   <div class = "pull-right col-md-4">
     <ul>
-      <li><%= link_to "主页", root_path %></li>
+      <li><%= link_to "关于", about_path %></li>
+      <li><%= link_to "联系我们", contact_path %></li>
+      <li><%= link_to "隐私声明", privacy_path %></li>
     </ul>
   </div>
 </div>
