--- a/app/assets/stylesheets/customize.css.scss
+++ b/app/assets/stylesheets/customize.css.scss
@@ -15,7 +15,10 @@ $disabled-color: #bbb;
 body {
 	font: 12px Helvetica,Arial,sans-serif;
 	line-height: 1.62;
+	background-color: #ebebeb;
+	height: 100%;
 }
+
 .navbar-color {
 	background-color: #364956;
 }
@@ -29,7 +32,6 @@ a {
 }
 a:hover {
   text-decoration: none;
-	color: #fff;
 }
 
 nav a {
@@ -39,11 +41,6 @@ nav a {
 }
 nav a:hover {
 	color: #f5f5f1;
-}
-
-body {
-	//background-image: image-url("background.png");
-	background-color: #ebebeb;
 }
 
 #sign-box {
@@ -680,16 +677,16 @@ ul {
 
 #favourite-tab {
 	position: fixed;
-	top: 100px;
+	top: 180px;
 	left: 0px;
-	width: 93px;
-	height: 50px;
+	width: 33px;
+	height: 130px;
 	padding: 10px 6px;
 	font-weight: 500;
 	font-size: 18px;
 	color: #fff;
-	border-bottom-right-radius: 23px;
-	border-top-right-radius: 23px;
+	border-bottom-right-radius: 212px;
+	border-top-right-radius: 12px;
 	background-color: $normal-color;
 }
 
@@ -697,6 +694,12 @@ ul {
 	background-color: $hover-color;
 }
 
+#favourite-tab > a {
+	color: #fff;
+}
+#favourite-tab > a:hover {
+	color: #fff;
+}
 .field_with_errors > span {
   display: none;
 }
@@ -718,4 +721,25 @@ hr{
 
 #pTab {
   margin-top: 0px;
+}
+
+.fixed-bottom {
+	position: absolute;
+	bottom: 0;
+	margin-bottom: 0;
+	height: 60px;
+	width: 100%;
+}
+#tagslide {
+	min-height: 100%;
+	height: 100%;
+	//position: relative;
+}
+body {
+	background-color: #ebebeb;
+	height: 100%;
+	padding: 0px; 
+}
+#tagpage {
+	padding-bottom: 60px;   /* Height of the footer */
 }
