--- a/app/views/clause/privacy.html.erb
+++ b/app/views/clause/privacy.html.erb
@@ -1,34 +1,36 @@
         
-    <h1>ÒþË½ÉùÃ÷</h1>
+    <h1>éšç§å£°æ˜Ž</h1>
 
     <div class="grid-16-8 clearfix">
         
         
         <div class="article">
 	  
-¡¡¡¡Ê×ÏÈ»¶Ó­Äú¼ÓÈëTagSlide£¬TagSlide·Ç³£ÖØÊÓ¶ÔÄúµÄ¸öÈËÒþË½±£»¤£¬ÓÐÊ±ºòÎÒÃÇÐèÒªÄ³Ð©ÐÅÏ¢²ÅÄÜÎªÄúÌá¹©ÄúÇëÇóµÄ·þÎñ£¬±¾ÒþË½ÉùÃ÷½âÊÍÁËÕâÐ©Çé¿öÏÂµÄÊý¾ÝÊÕ¼¯ºÍÊ¹ÓÃÇé¿ö¡£<br/>
-¡¡¡¡±¾ÒþË½ÉùÃ÷ÊÊÓÃÓÚTagSlideµÄËùÓÐÏà¹Ø·þÎñ£¬Ëæ×ÅTagSlide·þÎñ·¶Î§µÄÀ©´ó£¬ÒþË½ÉùÃ÷µÄÄÚÈÝ¿ÉÓÉTagSlideËæÊ±¸üÐÂ£¬ÇÒÎãÐëÁíÐÐÍ¨Öª¡£¸üÐÂºóµÄÒþË½ÉùÃ÷Ò»µ©ÔÚÍøÒ³ÉÏ¹«²¼¼´ÓÐÐ§´úÌæÔ­À´µÄÒþË½ÉùÃ÷¡£<br/><br/>
+ã€€ã€€é¦–å…ˆæ¬¢è¿Žæ‚¨åŠ å…¥TagSlideï¼ŒTagSlideéžå¸¸é‡è§†å¯¹æ‚¨çš„ä¸ªäººéšç§ä¿æŠ¤ï¼Œæœ‰æ—¶å€™æˆ‘ä»¬éœ€è¦æŸäº›ä¿¡æ¯æ‰èƒ½ä¸ºæ‚¨æä¾›æ‚¨è¯·æ±‚çš„æœåŠ¡ï¼Œæœ¬éšç§å£°æ˜Žè§£é‡Šäº†è¿™äº›æƒ…å†µä¸‹çš„æ•°æ®æ”¶é›†å’Œä½¿ç”¨æƒ…å†µã€‚<br/>
+ã€€ã€€æœ¬éšç§å£°æ˜Žé€‚ç”¨äºŽTagSlideçš„æ‰€æœ‰ç›¸å…³æœåŠ¡ï¼Œéšç€TagSlideæœåŠ¡èŒƒå›´çš„æ‰©å¤§ï¼Œéšç§å£°æ˜Žçš„å†…å®¹å¯ç”±TagSlideéšæ—¶æ›´æ–°ï¼Œä¸”æ¯‹é¡»å¦è¡Œé€šçŸ¥ã€‚æ›´æ–°åŽçš„éšç§å£°æ˜Žä¸€æ—¦åœ¨ç½‘é¡µä¸Šå…¬å¸ƒå³æœ‰æ•ˆä»£æ›¿åŽŸæ¥çš„éšç§å£°æ˜Žã€‚<br/><br/>
 
-<span class="wrap"><h3>ÎÒÃÇÊÕ¼¯ÄÄÐ©ÐÅÏ¢</h3></span>
-¡¡¡¡Í¨³££¬ÄúÄÜÔÚÄäÃûµÄ×´Ì¬ÏÂ·ÃÎÊTagSlide²¢»ñÈ¡ÐÅÏ¢¡£µ±ÎÒÃÇÐèÒªÄÜÊ¶±ðÄúµÄ¸öÈËÐÅÏ¢»òÕß¿ÉÒÔÓëÄúÁªÏµµÄÐÅÏ¢Ê±£¬ÎÒÃÇ»áÕ÷ÇóÄúµÄÍ¬Òâ¡£Í¨³££¬ÔÚÄú×¢²áTagSlide»òÉêÇë¿ªÍ¨ÐÂµÄ¹¦ÄÜÊ±£¬ÎÒÃÇ¿ÉÄÜÊÕ¼¯ÕâÐ©ÐÅÏ¢£ºÐÕÃû£¬EmailµØÖ·£¬×¡Ö·ºÍµç»°ºÅÂë£¬²¢Õ÷ÇóÄúµÄÈ·ÈÏ¡£<br/><br/>
+<span class="wrap"><h3>æˆ‘ä»¬æ”¶é›†å“ªäº›ä¿¡æ¯</h3></span>
+ã€€ã€€é€šå¸¸ï¼Œæ‚¨èƒ½åœ¨åŒ¿åçš„çŠ¶æ€ä¸‹è®¿é—®TagSlideå¹¶èŽ·å–ä¿¡æ¯ã€‚å½“æˆ‘ä»¬éœ€è¦èƒ½è¯†åˆ«æ‚¨çš„ä¸ªäººä¿¡æ¯æˆ–è€…å¯ä»¥ä¸Žæ‚¨è”ç³»çš„ä¿¡æ¯æ—¶ï¼Œæˆ‘ä»¬ä¼šå¾æ±‚æ‚¨çš„åŒæ„ã€‚é€šå¸¸ï¼Œåœ¨æ‚¨æ³¨å†ŒTagSlideæˆ–ç”³è¯·å¼€é€šæ–°çš„åŠŸèƒ½æ—¶ï¼Œæˆ‘ä»¬å¯èƒ½æ”¶é›†è¿™äº›ä¿¡æ¯ï¼šå§“åï¼ŒEmailåœ°å€ï¼Œä½å€å’Œç”µè¯å·ç ï¼Œå¹¶å¾æ±‚æ‚¨çš„ç¡®è®¤ã€‚<br/><br/>
 
-<span class="wrap"><h3>¹ØÓÚÄúµÄ¸öÈËÐÅÏ¢</h3></span>
-¡¡¡¡TagSlideÑÏ¸ñ±£»¤Äú¸öÈËÐÅÏ¢µÄ°²È«¡£ÎÒÃÇÊ¹ÓÃ¸÷ÖÖ°²È«¼¼ÊõºÍ³ÌÐòÀ´±£»¤ÄúµÄ¸öÈËÐÅÏ¢²»±»Î´¾­ÊÚÈ¨µÄ·ÃÎÊ¡¢Ê¹ÓÃ»òÐ¹Â¶¡£<br/>
-¡¡¡¡TagSlide»áÔÚ·¨ÂÉÒªÇó»ò·ûºÏTagSlideµÄÏà¹Ø·þÎñÌõ¿î¡¢Èí¼þÐí¿ÉÊ¹ÓÃÐ­ÒéÔ¼¶¨µÄÇé¿öÏÂÍ¸Â¶ÄúµÄ¸öÈËÐÅÏ¢£¬»òÕßÓÐ³ä·ÖÀíÓÉÏàÐÅ±ØÐëÕâÑù×ö²ÅÄÜ£º(a) Âú×ã·¨ÂÉ»òÐÐÕþ·¨¹æµÄÃ÷ÎÄ¹æ¶¨£¬»òÕß·ûºÏTagSlideÍøÕ¾ÊÊÓÃµÄ·¨ÂÉ³ÌÐò£»£¨b£©·ûºÏTagSlideÏà¹Ø·þÎñÌõ¿î¡¢Èí¼þÐí¿ÉÊ¹ÓÃÐ­ÒéµÄÔ¼¶¨£»(c) ±£»¤TagSlideµÄÈ¨Àû»ò²Æ²ú£¬ÒÔ¼° (d) ÔÚ½ô¼±Çé¿öÏÂ±£»¤TagSlideÔ±¹¤¡¢TagSlide²úÆ·»ò·þÎñµÄÓÃ»§»ò´óÖÚµÄ¸öÈË°²È«¡£<br/>
-¡¡¡¡TagSlide²»»áÎ´¾­ÄúµÄÔÊÐí½«ÕâÐ©ÐÅÏ¢ÓëµÚÈý·½¹²Ïí£¬±¾ÉùÃ÷ÒÑ¾­ÁÐ³öµÄÉÏÊöÇé¿ö³ýÍâ¡£<br/><br/>
+<span class="wrap"><h3>å…³äºŽæ‚¨çš„ä¸ªäººä¿¡æ¯</h3></span>
+ã€€ã€€TagSlideä¸¥æ ¼ä¿æŠ¤æ‚¨ä¸ªäººä¿¡æ¯çš„å®‰å…¨ã€‚æˆ‘ä»¬ä½¿ç”¨å„ç§å®‰å…¨æŠ€æœ¯å’Œç¨‹åºæ¥ä¿æŠ¤æ‚¨çš„ä¸ªäººä¿¡æ¯ä¸è¢«æœªç»æŽˆæƒçš„è®¿é—®ã€ä½¿ç”¨æˆ–æ³„éœ²ã€‚<br/>
+ã€€ã€€TagSlideä¼šåœ¨æ³•å¾‹è¦æ±‚æˆ–ç¬¦åˆTagSlideçš„ç›¸å…³æœåŠ¡æ¡æ¬¾ã€è½¯ä»¶è®¸å¯ä½¿ç”¨åè®®çº¦å®šçš„æƒ…å†µä¸‹é€éœ²æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼Œæˆ–è€…æœ‰å……åˆ†ç†ç”±ç›¸ä¿¡å¿…é¡»è¿™æ ·åšæ‰èƒ½ï¼š(a) æ»¡è¶³æ³•å¾‹æˆ–è¡Œæ”¿æ³•è§„çš„æ˜Žæ–‡è§„å®šï¼Œæˆ–è€…ç¬¦åˆTagSlideç½‘ç«™é€‚ç”¨çš„æ³•å¾‹ç¨‹åºï¼›ï¼ˆbï¼‰ç¬¦åˆTagSlideç›¸å…³æœåŠ¡æ¡æ¬¾ã€è½¯ä»¶è®¸å¯ä½¿ç”¨åè®®çš„çº¦å®šï¼›(c) ä¿æŠ¤TagSlideçš„æƒåˆ©æˆ–è´¢äº§ï¼Œä»¥åŠ (d) åœ¨ç´§æ€¥æƒ…å†µä¸‹ä¿æŠ¤TagSlideå‘˜å·¥ã€TagSlideäº§å“æˆ–æœåŠ¡çš„ç”¨æˆ·æˆ–å¤§ä¼—çš„ä¸ªäººå®‰å…¨ã€‚<br/>
+ã€€ã€€TagSlideä¸ä¼šæœªç»æ‚¨çš„å…è®¸å°†è¿™äº›ä¿¡æ¯ä¸Žç¬¬ä¸‰æ–¹å…±äº«ï¼Œæœ¬å£°æ˜Žå·²ç»åˆ—å‡ºçš„ä¸Šè¿°æƒ…å†µé™¤å¤–ã€‚<br/><br/>
 
-<span class="wrap"><h3>CookieµÄÊ¹ÓÃ</h3></span>
-¡¡¡¡Ê¹ÓÃ Cookie ÄÜ°ïÖúÄúÊµÏÖÄúµÄÁª»úÌåÑéµÄ¸öÐÔ»¯£¬Äú¿ÉÒÔ½ÓÊÜ»ò¾Ü¾ø Cookie £¬´ó¶àÊý Web ä¯ÀÀÆ÷»á×Ô¶¯½ÓÊÜ Cookie£¬µ«ÄúÍ¨³£¿É¸ù¾Ý×Ô¼ºµÄÐèÒªÀ´ÐÞ¸Ää¯ÀÀÆ÷µÄÉèÖÃÒÔ¾Ü¾ø Cookie¡£<br/>
-¡¡¡¡TagSlideÓÐÊ±»áÊ¹ÓÃ Cookie ÒÔ±ãÖªµÀÄÄÐ©ÄÚÈÝÊÜ»¶Ó­£¬Ê¹ÄúÔÚ·ÃÎÊTagSlideÊ±ÄÜµÃµ½¸üºÃµÄ·þÎñ¡£Cookie²»»á¸ú×Ù¸öÈËÐÅÏ¢¡£<br/>
-¡¡¡¡µ±Äú×¢²áTagSlideÊ±£¬TagSlideÒà»áÊ¹ÓÃ Cookie¡£ÔÚÕâÖÖÇé¿öÏÂ£¬TagSlide»áÊÕ¼¯²¢´æ´¢ÓÐÓÃÐÅÏ¢£¬µ±ÄúÔÙ´Î·ÃÎÊTagSlideÊ±£¬ÎÒÃÇ¿É±æÈÏÄúµÄÉí·Ý¡£À´×ÔTagSlideµÄ Cookie Ö»ÄÜ±»TagSlide¶ÁÈ¡¡£<br/>
-¡¡¡¡Èç¹ûÄúµÄä¯ÀÀÆ÷±»ÉèÖÃÎª¾Ü¾ø Cookie£¬ÄúÈÔÈ»ÄÜ¹»·ÃÎÊTagSlideµÄ´ó¶àÊýÍøÒ³¡£<br/><br/>
+<span class="wrap"><h3>Cookieçš„ä½¿ç”¨</h3></span>
+ã€€ã€€ä½¿ç”¨ Cookie èƒ½å¸®åŠ©æ‚¨å®žçŽ°æ‚¨çš„è”æœºä½“éªŒçš„ä¸ªæ€§åŒ–ï¼Œæ‚¨å¯ä»¥æŽ¥å—æˆ–æ‹’ç» Cookie ï¼Œå¤§å¤šæ•° Web æµè§ˆå™¨ä¼šè‡ªåŠ¨æŽ¥å— Cookieï¼Œä½†æ‚¨é€šå¸¸å¯æ ¹æ®è‡ªå·±çš„éœ€è¦æ¥ä¿®æ”¹æµè§ˆå™¨çš„è®¾ç½®ä»¥æ‹’ç» Cookieã€‚<br/>
+ã€€ã€€TagSlideæœ‰æ—¶ä¼šä½¿ç”¨ Cookie ä»¥ä¾¿çŸ¥é“å“ªäº›å†…å®¹å—æ¬¢è¿Žï¼Œä½¿æ‚¨åœ¨è®¿é—®TagSlideæ—¶èƒ½å¾—åˆ°æ›´å¥½çš„æœåŠ¡ã€‚Cookieä¸ä¼šè·Ÿè¸ªä¸ªäººä¿¡æ¯ã€‚<br/>
+ã€€ã€€å½“æ‚¨æ³¨å†ŒTagSlideæ—¶ï¼ŒTagSlideäº¦ä¼šä½¿ç”¨ Cookieã€‚åœ¨è¿™ç§æƒ…å†µä¸‹ï¼ŒTagSlideä¼šæ”¶é›†å¹¶å­˜å‚¨æœ‰ç”¨ä¿¡æ¯ï¼Œå½“æ‚¨å†æ¬¡è®¿é—®TagSlideæ—¶ï¼Œæˆ‘ä»¬å¯è¾¨è®¤æ‚¨çš„èº«ä»½ã€‚æ¥è‡ªTagSlideçš„ Cookie åªèƒ½è¢«TagSlideè¯»å–ã€‚<br/>
+ã€€ã€€å¦‚æžœæ‚¨çš„æµè§ˆå™¨è¢«è®¾ç½®ä¸ºæ‹’ç» Cookieï¼Œæ‚¨ä»ç„¶èƒ½å¤Ÿè®¿é—®TagSlideçš„å¤§å¤šæ•°ç½‘é¡µã€‚<br/><br/>
 
-<span class="wrap"><h3>¹ØÓÚÃâÔðËµÃ÷</h3></span>
-¡¡¡¡¾ÍÏÂÁÐÏà¹ØÊÂÒËµÄ·¢Éú£¬TagSlide²»³Ðµ£ÈÎºÎ·¨ÂÉÔðÈÎ£º<br/>
-¡¡¡¡¡¡* ÓÉÓÚÄú½«ÓÃ»§ÃÜÂë¸æÖªËûÈË»òÓëËûÈË¹²Ïí×¢²áÕÊ»§£¬ÓÉ´Ëµ¼ÖÂµÄÈÎºÎ¸öÈËÐÅÏ¢µÄÐ¹Â¶£¬»òÆäËû·ÇÒòTagSlideÔ­Òòµ¼ÖÂµÄ¸öÈËÐÅÏ¢µÄÐ¹Â¶£»<br/>
-¡¡¡¡¡¡* TagSlide¸ù¾Ý·¨ÂÉ¹æ¶¨»òÕþ¸®Ïà¹ØÕþ²ßÒªÇóÌá¹©ÄúµÄ¸öÈËÐÅÏ¢£»<br/>
-¡¡¡¡¡¡* ÈÎºÎµÚÈý·½¸ù¾ÝTagSlide¸÷·þÎñÌõ¿î¼°ÉùÃ÷ÖÐËùÁÐÃ÷µÄÇé¿öÊ¹ÓÃÄúµÄ¸öÈËÐÅÏ¢£¬ÓÉ´ËËù²úÉúµÄ¾À·×£»<br/>
-¡¡¡¡¡¡* ÈÎºÎÓÉÓÚºÚ¿Í¹¥»÷¡¢µçÄÔ²¡¶¾ÇÖÈë»òÕþ¸®¹ÜÖÆ¶øÔì³ÉµÄÔÝÊ±ÐÔÍøÕ¾¹Ø±Õ£»<br/>
-¡¡¡¡¡¡* Òò²»¿É¿¹Á¦µ¼ÖÂµÄÈÎºÎºó¹û£»<br/>
-¡¡¡¡¡¡* TagSlideÔÚ¸÷·þÎñÌõ¿î¼°ÉùÃ÷ÖÐÁÐÃ÷µÄÊ¹ÓÃ·½Ê½»òÃâÔðÇéÐÎ¡£<br/>
+<span class="wrap"><h3>å…³äºŽå…è´£è¯´æ˜Ž</h3></span>
+ã€€ã€€å°±ä¸‹åˆ—ç›¸å…³äº‹å®œçš„å‘ç”Ÿï¼ŒTagSlideä¸æ‰¿æ‹…ä»»ä½•æ³•å¾‹è´£ä»»ï¼š<br/>
+ã€€ã€€ã€€* ç”±äºŽæ‚¨å°†ç”¨æˆ·å¯†ç å‘ŠçŸ¥ä»–äººæˆ–ä¸Žä»–äººå…±äº«æ³¨å†Œå¸æˆ·ï¼Œç”±æ­¤å¯¼è‡´çš„ä»»ä½•ä¸ªäººä¿¡æ¯çš„æ³„éœ²ï¼Œæˆ–å…¶ä»–éžå› TagSlideåŽŸå› å¯¼è‡´çš„ä¸ªäººä¿¡æ¯çš„æ³„éœ²ï¼›<br/>
+ã€€ã€€ã€€* TagSlideæ ¹æ®æ³•å¾‹è§„å®šæˆ–æ”¿åºœç›¸å…³æ”¿ç­–è¦æ±‚æä¾›æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼›<br/>
+ã€€ã€€ã€€* ä»»ä½•ç¬¬ä¸‰æ–¹æ ¹æ®TagSlideå„æœåŠ¡æ¡æ¬¾åŠå£°æ˜Žä¸­æ‰€åˆ—æ˜Žçš„æƒ…å†µä½¿ç”¨æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼Œç”±æ­¤æ‰€äº§ç”Ÿçš„çº çº·ï¼›<br/>
+ã€€ã€€ã€€* ä»»ä½•ç”±äºŽé»‘å®¢æ”»å‡»ã€ç”µè„‘ç—…æ¯’ä¾µå…¥æˆ–æ”¿åºœç®¡åˆ¶è€Œé€ æˆçš„æš‚æ—¶æ€§ç½‘ç«™å…³é—­ï¼›<br/>
+ã€€ã€€ã€€* å› ä¸å¯æŠ—åŠ›å¯¼è‡´çš„ä»»ä½•åŽæžœï¼›<br/>
+ã€€ã€€ã€€* TagSlideåœ¨å„æœåŠ¡æ¡æ¬¾åŠå£°æ˜Žä¸­åˆ—æ˜Žçš„ä½¿ç”¨æ–¹å¼æˆ–å…è´£æƒ…å½¢ã€‚<br/>
 <br/><br/>
+</div>
+</div>
