--- a/public/assets/tagslide.css
+++ b/public/assets/tagslide.css
@@ -6844,11 +6844,13 @@ body {
 
 a {
   text-decoration: none;
-  color: #fff; }
+  //color: #fff; 
+}
 
 a:hover {
   text-decoration: none;
-  color: #fff; }
+  //color: #fff; 
+}
 
 nav a {
   font-weight: 500;
@@ -6857,9 +6859,6 @@ nav a {
 
 nav a:hover {
   color: #f5f5f1; }
-
-body {
-  background-color: #ebebeb; }
 
 #sign-box {
   border-radius: 10px;
@@ -7453,21 +7452,25 @@ ul {
 
 #favourite-tab {
   position: fixed;
-  top: 100px;
+  top: 180px;
   left: 0px;
-  width: 93px;
-  height: 50px;
+  width: 33px;
+  height: 130px;
   padding: 10px 6px;
   font-weight: 500;
   font-size: 18px;
   color: #fff;
-  border-bottom-right-radius: 23px;
-  border-top-right-radius: 23px;
+  border-bottom-right-radius: 12px;
+  border-top-right-radius: 12px;
   background-color: #364956; }
 
 #favourite-tab:hover {
   background-color: #ea141f; }
 
+#favourite-tab > a{
+  color: #fff; }
+#favourite-tab > a:hover {
+  color: #fff; }
 .field_with_errors > span {
   display: none; }
 
@@ -7484,6 +7487,30 @@ hr {
 
 .remember {
   margin-top: 0px; }
+#pTab {
+  margin-top: 0px; }
+
+.fixed-bottom {
+	position: absolute;
+  bottom: 0;
+  margin-bottom: 0;
+	height: 60px;
+	width: 100%;
+}
+#tagslide {
+  min-height: 100%;
+  height: 100%;
+	//position: relative;
+}
+body {
+  background-color: #ebebeb;
+	height: 100%;
+	padding: 0px;
+}
+#tagpage {
+  padding-bottom: 60px;   /* Height of the footer */
+}
+
 /*
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
