--- a/app/views/clause/contact.html.erb
+++ b/app/views/clause/contact.html.erb
@@ -1,6 +1,6 @@
-<div id="content">        
+<div id="contact" class="clause">        
     <h1>联系我们</h1>
     <br/>
-    <p>　　关于网站的使用问题、改进建议，或举报不良信息，请联系管理员(tagslide@126.com)。</p>
-    <p>　　如果您有好的和本站内容相关的幻灯片，欢迎发送给我们(tagslide@126.com)与大家分享，非常感谢。</p>
+    <p>关于网站的使用问题、改进建议，或举报不良信息，请联系管理员(tagslide@126.com)。</p>
+    <p>如果您有好的和本站内容相关的幻灯片，欢迎发送给我们(tagslide@126.com)与大家分享，非常感谢。</p>
 </div>
