--- a/app/views/clause/terms.html.erb
+++ b/app/views/clause/terms.html.erb
@@ -1,7 +1,5 @@
- <h1>使用协议</h1>
-
-    <div class="grid-16-8 clearfix">
-        <div class="article">
+<div class = clause>
+<h1 style="text-align: center;">使用协议</h1>
 	  
 <span class="wrap"><h3>1　接受条款</h3></span>
 　　TagSlide根据以下服务条款为您提供服务。这些条款可由TagSlide随时更新，且毋须另行通知。TagSlide使用协议（以下简称“使用协议”）一旦发生变动，TagSlide将在网页上公布修改内容。修改后的使用协议一旦在网页上公布即有效代替原来的使用协议。此外，当您使用TagSlide特殊服务时，您和TagSlide应遵守TagSlide随时公布的与该服务相关的指引和规则。前述所有的指引和规则，均构成本使用协议的一部分。<br/><br/>
@@ -33,7 +31,7 @@
 　　3）每个用户都要对其帐号中的所有行为和事件负全责。如果您未保管好自己的帐号和密码而对您、TagSlide或第三方造成的损害，您将负全部责任。<br/>
 
 <span class="wrap"><h3>6　TagSlide隐私权政策</h3></span>
-　　您提供的登记资料及TagSlide保留的有关您的若干其它资料将受到中国有关隐私的法律和本公司《<a href="/about?policy=privacy">隐私声明</a>》之规范。<br/>
+　　您提供的登记资料及TagSlide保留的有关您的若干其它资料将受到中国有关隐私的法律和本公司《<a href="/privacy">隐私声明</a>》之规范。<br/>
 
 <span class="wrap"><h3>7　提供者之责任</h3></span>
 　　根据有关法律法规，TagSlide在此郑重提请您注意，任何经由本服务而发布、上传的文字、资讯、资料、音乐、照片、图形、视讯、信息或其它资料（以下简称“内容 ”），无论系公开还是私下传送，均由内容提供者承担责任。TagSlide仅为用户提供内容存储空间，无法控制经由本服务传送之内容，因此不保证内容的正确性、完整性或品质。您已预知使用本服务时，可能会接触到令人不快、不适当或令人厌恶之内容。在任何情况下，TagSlide均不为任何内容负责，但TagSlide有权依法停止传输任何前述内容并采取相应行动，包括但不限于暂停用户使用本服务的全部或部分，保存有关记录，并向有关机关报告。<br/>
@@ -181,7 +179,7 @@
 
 
 <span class="wrap"><h3>23　一般条款</h3></span>
-　　1）本使用协议、<a href="/about?policy=guideline">社区指导原则</a>和<a href="/about?policy=disclaimer">免责声明</a>构成您与TagSlide之全部协议，并规范您对于本服务之使用行为。在您使用相关服务、使用第三方提供的内容或软件时，亦应遵从所适用之附加条款及条件；<br/><br/>
+　　1）本使用协议构成您与TagSlide之全部协议，并规范您对于本服务之使用行为。在您使用相关服务、使用第三方提供的内容或软件时，亦应遵从所适用之附加条款及条件；<br/><br/>
 
 　　2）本使用协议及您与TagSlide之关系，均受到中华人民共和国法律管辖。您与TagSlide就本服务、本使用协议或其它有关事项发生的争议，应首先友好协商解决，协商不成时应提请中国国际经济贸易仲裁委员会仲裁，仲裁裁决是终局性的，对双方均有约束力；<br/><br/>
 
@@ -193,6 +191,4 @@
 
 　　6）TagSlide对本使用协议享有最终解释权。<br/>
 
-
-	</div>
-	</div>
+</div>
