--- a/app/views/powerpoints/show.html.erb
+++ b/app/views/powerpoints/show.html.erb
@@ -83,4 +83,8 @@
 		</script>
 	</div>
 </div>
-
+<% content_for :tail_js do %>
+	<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/button.js#style=-1&amp;uuid=&amp;pophcol=1&amp;lang=zh"></script>
+	<a class="bshareDiv" onclick="javascript:return false;"></a>
+	<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/bshareC0.js"></script>
+<% end %>
