--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= render 'shared/flash_messages' %>
 <div id="tagslide">
-	<%= render 'shared/flash_messages' %>
-	<header class="navbar navbar-static-top navbar-color" role="banner">
-		<%= render :partial => "shared/nav" %>
-	</header>
+  <header class="navbar navbar-static-top navbar-color" role="banner">
+      <%= render :partial => "shared/nav" %>
+  </header>
 
-	<div id="tagpage">
-	  <%= yield %>
-	</div>
+  <div id="tagpage">
+    <%= yield %>
+  </div>
 
-	<%= render 'shared/footer' %>
+  <%= render 'shared/footer' %>
 </div>
 <script src="/assets/up-to-top.js"></script>
 <script type="text/javascript">
@@ -30,8 +30,6 @@
 		$().UItoTop({ easingType: 'easeOutQuart' });
 	});
 </script>
-<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/button.js#style=-1&amp;uuid=&amp;pophcol=1&amp;lang=zh"></script>
-<a class="bshareDiv" onclick="javascript:return false;"></a>
-<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/bshareC0.js"></script>
+<%= yield :tail_js %>
 </body>
 </html>
