--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class= "row fixed-bottom">
+<div id="footer" class= "row fixed-bottom">
   <div class = "col-md-offset-1 col-md-5">
     <ul>
       <li>&copy; 2013 TagSlide</li>
