--- a/public/assets/tagslide.css
+++ b/public/assets/tagslide.css
@@ -7521,6 +7521,9 @@ html, body {
   float: left;
   width: 100px;
 }
+#footer ul{
+  padding-top: 10px;
+}
 /*
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
