--- a/app/views/home/leokmaxloveemilyforever.html.erb
+++ b/app/views/home/leokmaxloveemilyforever.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, "Manage Page")%>
 <% if can? :manage, :all%>
+  <div class="row">
 	<div class = "col-md-offset-1 col-md-5">	
 		<%=	render 'powerpoints/form' %>
 	</div>
 	<div class = "col-md-offset-1 col-md-5">
 	  <%= render 'categories/form' %>
 	</div>
+  </div>
 <% end %>
