modify sign container top

--- a/app/assets/stylesheets/customize.css.scss
+++ b/app/assets/stylesheets/customize.css.scss
@@ -55,8 +55,7 @@ nav a:hover {
 }
 
 .sign-container {
-	position:relative;
-	top: 100px;
+	padding-top: 100px;
 	z-index: 5;
 }
 .placeholder {
@@ -745,7 +744,7 @@ html, body {
   position: relative;
 }
 #tagpage {
-  padding-bottom: 60px;
+  padding-bottom: 80px;
 }
 .clause {
   margin: 0px 180px 0px 160px;
