--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4959,6 +4959,7 @@ a.list-group-item.active > .badge,
 	float: left;
   height: auto;
   max-width: 100%;
+  width: 100%;
   padding: 4px;
   line-height: 1.428571429;
   background-color: #ffffff;
