--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
 						</div>
 						<div class="avatar-suggest">
 							</br>
-							建议您上传近距离的照片（比如大头照、特写），照片尺寸最好大于300x300像素,这样经过编辑后的头像会很清楚。 
+							建议您上传近距离的照片（比如大头照、特写），照片尺寸最好大于300x300像素,这样编辑后的头像比较清楚。 
 							</br>
 						</div>
 					</div>  
