--- a/app/views/powerpoints/_form.html.erb
+++ b/app/views/powerpoints/_form.html.erb
@@ -13,12 +13,8 @@
     <%= f.text_field :download_url, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :attachment, "上传PPT文件" %>
-    <%= f.file_field :attachment %>
-  </div>
-  <div class="form-group">
-    <%= f.label :image, " PPT文件的图片" %>
-    <%= f.file_field :image %>
+    <%= f.label :pdffile, "上传PDF文件" %>
+    <%= f.file_field :pdffile %>
   </div>
   <div class="form-group">
     <%= f.label :category_id, "全部分类" %>
