--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,6 +2,7 @@
   <div class = "col-md-offset-1 col-md-5">
     <ul>
       <li>&copy; 2013 TagSlide</li>
+			<li><a href="http://www.miitbeian.gov.cn/">京ICP备13045793号</a></li>
     </ul>
   </div>
   <div class = "pull-right col-md-4">
