--- a/app/assets/stylesheets/customize.css.scss
+++ b/app/assets/stylesheets/customize.css.scss
@@ -246,7 +246,7 @@ span.adjust {
 	width: 100%;
     height: 212px;
 }
-.media-body h3 {
+.media-body h5 {
 	margin-top: 2px;
 }
 
@@ -407,16 +407,18 @@ a.prev span, a.next span {
 
 //For tags
 .tag-list {
-	width: 90%;
+	width: auto;
 	height: 36px;
-	top:2px;
-	//position:relative;
+	float: left;
+	display: inline;
+	padding: 10px 5px;
 }
 
 .tags {
 	display: inline-block;
-	width:inherit;
-	height:auto;
+	width: 500px;
+	height: 32px;
+	overflow: hidden;
 	position:absolute;
 	padding:0;
 	margin:0;
@@ -502,6 +504,21 @@ a.prev span, a.next span {
 	opacity: 1;
 }
 
+.comments-icon {
+	padding: 12px 6px;
+	float: right;
+}
+.comment-icon {
+  background: image-url("icon.png") no-repeat transparent;
+	width: 25px;
+	height: 25px;
+	display: inline-block;
+	vertical-align: middle;
+	background-position: -497px -239px;
+}
+.comments-icon a:hover {
+	background-position: -526px -239px;
+}
 .ppt-control {
   position: absolute;
 	bottom: 10px;
@@ -612,8 +629,52 @@ ul {
 	color: #404040;
 }
 
+#shares {
+	padding: 15px 5px;
+	float: right;
+}
+
+#shares span {
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	padding-right: 3px;
+}
+#gohome {
+	padding: 11px 15px;
+	float: right;
+}
+#gohome a{
+  background: image-url("navbar_sprite.png") no-repeat transparent;
+	opacity: 1;
+	background-position: 0px -5px;
+	cursor: pointer;
+	display: inline-block;
+	vertical-align: middle;
+	width: 30px;
+	height: 30px;
+}
+#help {
+	padding: 11px 5px;
+	float: right;
+}
+#help a{
+  background: image-url("navbar_sprite.png") no-repeat transparent;
+	opacity: 1;
+	background-position: -70px -5px;
+	cursor: pointer;
+	display: inline-block;
+	vertical-align: middle;
+	width: 38px;
+	height: 30px;
+}
+#interactions {
+	padding: 12px 5px;
+	float: right;
+}
 #interactions span {
 	font-size: 14px;
+	font-weight: bold;
 	padding-right: 12px;
 }
 
@@ -685,7 +746,7 @@ ul {
 	font-weight: 500;
 	font-size: 18px;
 	color: #fff;
-	border-bottom-right-radius: 212px;
+	border-bottom-right-radius: 12px;
 	border-top-right-radius: 12px;
 	background-color: $normal-color;
 }
@@ -753,8 +814,49 @@ html, body {
 
 #footer li{
   float: left;
-  width: 100px;
+  width: auto;
+	padding: 6px 20px;
 }
 #footer ul {
   padding-top: 10px;
+}
+nav#helpers {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	text-align: center;
+	position: fixed;
+	bottom: 0;
+	z-index: 10;
+	left: 36%;
+	margin-left: -200px;
+	width: 800px;
+	height: 60px;
+	background-color: black;
+	opacity: 0.1;
+}
+nav#helpers:hover {
+	opacity: 0.8;
+}
+nav#helpers button {
+	background: none;
+	border: none;
+	color: white;
+	cursor: pointer;
+}
+.toc {
+	font-size: 10px;
+	position: relative;
+	top: -3px;
+}
+nav#helpers button#slide-no {
+	font-size: 10px;
+	border: 1px solid white;
+	padding: 4px;
+	margin-bottom: 4px;
+}
+#nav-next {
+	margin-right: 20px;
+}
+menu {
+	display: inline;
 }
