--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><%= yield(:title) %></title>
+  <title><%= yield(:title) %></title>
+	<meta charset='utf-8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="discription" content="幻灯片分享社区"/>
   <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<script src="/assets/carousel.js"></script>
 	<script src="/assets/jquery_ujs.js"></script>
 	<%= yield :javascript %>
   <link   href="/assets/tagslide.css" media = "all" rel = "stylesheet">
 	<link type="image/vnd.microsoft.icon" rel="shortcut icon" href="/assets/favicon.png">
-	<%= yield :meta %>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-44797086-1', 'tagslide.com');
+		ga('send', 'pageview');
+	</script>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -30,6 +40,6 @@
 		$().UItoTop({ easingType: 'easeOutQuart' });
 	});
 </script>
-<%= yield :tail_js %>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
