--- a/app/views/powerpoints/_form.html.erb
+++ b/app/views/powerpoints/_form.html.erb
@@ -1,33 +1,27 @@
 <%= form_for(@powerpoint, :html => {:multipart => true}) do |f| %>
 	<%= render 'shared/error_messages', object: f.object %>
   <div class="form-group">
-    <%= f.label :title, "PPT标题" %>
+    <%= f.label :title, "标题(必填)" %>
     <%= f.text_field :title, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :description, "PPT的相关描述" %>
+    <%= f.label :description, "相关描述(可选)" %>
     <%= f.text_area :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :download_url, "PPT下载地址" %>
+    <%= f.label :download_url, "下载地址(可选)" %>
     <%= f.text_field :download_url, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :pdffile, "上传PDF文件" %>
+    <%= f.label :pdffile, "上传幻灯片(只支持PDF格式,大小在10M以内)" %>
     <%= f.file_field :pdffile %>
   </div>
   <div class="form-group">
     <%= f.label :category_id, "全部分类" %>
 		<%= f.select :category_id, Category.order("name ASC").map {|c| [c.name, c.id]}, {},{class: "form-control"} %>
   </div>
-	<div>
-	  <%= f.radio_button :powerpoint_type, 'flash', checked: true %> 
-	  <%= f.label :powerpoint_type, 'Flash', value: 'flash' %>
-	  <%= f.radio_button :powerpoint_type, 'pdf' %>
-	  <%= f.label :powerpoint_type, 'PDF', value: 'pdf' %>
-  </div>
 	<div class="form-group">
-		  <%= f.label :tag_list, "标签(请用英文逗号分割)" %><br />
+		  <%= f.label :tag_list, "标签(请用英文逗号分割，可选)" %><br />
 		  <%= f.text_field :tag_list,  class: "form-control" %>
 	</div>
   <div>
