--- a/app/views/powerpoints/_onepage.html.erb
+++ b/app/views/powerpoints/_onepage.html.erb
@@ -1,4 +1,4 @@
 <article>
-  <% address = "http://10.0.2.136/slides/" + powerpoint.file_id + "/" + page.to_s + ".png" %>
-  <img src=<%= address %> alt="powerpoint.title" width="800">
+  <% address = "http://localhost/slides/" + powerpoint.file_id + "/" + page.to_s + ".png" %>
+	<img src=<%= address %> alt=<%= powerpoint.title %> width="800">
 </article>
