--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <% content_for :javascript do %>
 	<script>
 		$(document).ready(function() {
-			$("#tech").carouFredSel(
+			$("#atech").carouFredSel(
 				{
 					circular : false,
 					infinite : false,
@@ -12,13 +12,13 @@
 						visible: 4,
 						minimum: 5
 					},
-					prev	: "#tech_prev",
-					next  : "#tech_next"
+					prev	: "#atech_prev",
+					next  : "#atech_next"
 				},
 				{ 
 					 wrapper  : "parent"
 				});
-			$("#food").carouFredSel(
+			$("#bidea").carouFredSel(
 				{
 					circular : false,
 					infinite : false,
@@ -28,13 +28,13 @@
 						visible: 4,
 						minimum: 5
 					},
-					prev	: "#food_prev",
-					next  : "#food_next"
+					prev	: "#bidea_prev",
+					next  : "#bidea_next"
 				},
 				{ 
 					 wrapper  : "parent"
 				});
-			$("#book").carouFredSel(
+			$("#cphoto").carouFredSel(
 				{
 					circular : false,
 					infinite : false,
@@ -44,8 +44,8 @@
 						visible: 4,
 						minimum: 5
 					},
-					prev	: "#book_prev",
-					next  : "#book_next"
+					prev	: "#cphoto_prev",
+					next  : "#cphoto_next"
 				},
 				{ 
 					 wrapper  : "parent"
