--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 	<meta charset='utf-8'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="discription" content="幻灯片分享社区"/>
+        <meta name="baidu-site-verification" content="mvAVQ0kuUa" />
   <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 	<script src="/assets/carousel.js"></script>
 	<script src="/assets/jquery_ujs.js"></script>
