--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@ $(document).ready(function() {
 						<%= render 'shared/error_messages', object: resource %>
 						<%= f.input :email, :required => false, :autofocus => true, label_html: {style: "display: none;"}, input_html: { placeholder: "邮箱", class: "form-control" }, wrapper_html: { class: "form-group col-md-offset-2 col-md-9" } %>
 						<%= f.input :username, :required => false, label_html: {style: "display: none;"}, input_html: { placeholder: "用户名", class: "form-control" }, wrapper_html: { class: "form-group col-md-offset-2 col-md-9" } %>
-							<%= f.input :password, :required => false, label_html: {style: "display: none;"}, input_html: { class: "form-control", placeholder: "密码"}, wrapper_html: { class: "form-group col-md-offset-2 col-md-9" } %>
+							<%= f.input :password, :required => false, label_html: {style: "display: none;"}, input_html: { class: "form-control", placeholder: "密码(6-20个字符)"}, wrapper_html: { class: "form-group col-md-offset-2 col-md-9" } %>
 							<%= f.input :password_confirmation, :required => false, label_html: {style: "display: none;"}, input_html: { class: "form-control", placeholder: "确认密码" }, wrapper_html: { class: "form-group col-md-offset-2 col-md-9" } %>
 						<div class = "form-group">
                           <%= f.input :terms, :as => :boolean, :label => content_for(:the_links), wrapper_html: { class: "checkbox col-md-offset-2 col-md-9"} %> 
@@ -46,7 +46,7 @@ $(document).ready(function() {
 	  		<div class = "col-md-1"><div class = "divider"></div></div>
 
 				<div class = "col-md-5">
-					已经有Slideonline账户？直接
+					已经有TagSlide账户？直接
 					<%= link_to "登录", new_session_path(resource_name), {style: "color: #3276b1;"} %><br />
 				</div>
 		  </div>
