--- a/app/views/powerpoints/show.html.erb
+++ b/app/views/powerpoints/show.html.erb
@@ -4,7 +4,7 @@
 		<title><%= @powerpoint.title %></title>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="discription" content=<%= @powerpoint.title %>/>
+		<meta name="discription" content="<%= @powerpoint.title %>" />
 		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 		<script src="/assets/tagslide.js"></script>
@@ -83,7 +83,7 @@
 		<div id="comments" class="modal fade" role="dialog" aria-hidden="true">	
 			<div class = "modal-dialog">
 			<div class = "modal-content">
-			<%= render partial: 'comments/form' %>
+			<%= render partial: 'comments/form', locals: {c: @comment} %>
 			<hr />
 			<div id = "all-comments">
 			  <%= render partial: 'comments/comment', collection: @comments, as: :comment %>
